Changes file for Log::Log4perl::Layout::JSON

{{$NEXT}}

0.59  2021-09-20
  - Fix possible "uninitialized" warning
  - Add "maxkb.$field" option to truncate specific fields at specified maximum
    length

0.58  2021-05-26
  - Fix release SIGNATURE

0.57  2021-05-26
  - Add support for complex fields from log config (Thanks Anton Fedotov)
  - Bump minimum Perl version to 5.10

0.56  2018-07-21
  - Add "exclude_message" option, which will exclude the message from the JSON
    pattern.  This is useful if you are logging the message in the prefix for
    example with "format_prefix".

0.55  2018-07-19
  - format_prefix: Pass "category", "priority" and "caller level" to prefix so that %c, %p etc
    can be rendered in the prefix [github #5].

0.54  2018-07-02
  - Add support for "format_prefix" option.  If this is set, then the prefix
    string will be formatted using Log::Log4perl::Layout::PatternLayout. [github #4]

0.53  2018-01-31
  - Fix "Odd number of hash elements" in split if the last configured field is empty
    (GitHub #2)

0.52  2017-05-19
  - Make signature test a RELEASE or AUTHOR test only.  The test is skipped otherwise.
  - Remove Test::Signature from test prereqs.  The test will be skipped if
    Test::Signature is not installed.

0.51  2017-05-09
  - allow structured logging, enabled if the 'warp_message' appender option is
    turned on.  This allows you to log name/value pairs by simply passing them
    to the various log functions.  (Thanks Heiko Jansen)

0.50  2017-04-10

  - new mainteiner: Michael Schout
  - add "utf8" config switch which allows JSON content to be in utf8 encoding.
  - fix "off by one" caller depth in PatternLayout

0.002003  2014-11-20 16:27:06+00:00 Europe/Dublin

  - Append a newline to the output, so it can be used with file appenders etc.

0.002002  2014-11-07 13:14:49+00:00 Europe/Dublin

  - Smarter pruning of messages larger than max_json_length_kb

0.002001  2014-10-07 14:09:25+01:00 Europe/Dublin
