@@ -1,6 +1,8 @@
 Changes file for Log::Log4perl::Layout::JSON
 
 {{$NEXT}}
+  - Fix attempted use of non-hash references as hash references when using
+    complex fields [github #10]
 
 0.59  2021-09-20
   - Fix possible "uninitialized" warning
